@@ -460,6 +460,7 @@ check: test
 test: libffitest.so.1.0 ./mosh all-tests.scm
 	./mosh --loadpath=".:./test/mylib" test/use-foo.scm # test : separated loadpath
 	./mosh -5 all-tests.scm
+	./mosh test/misc.scm
 	./mosh test/testing.scm
 	./mosh test/mosh-test.scm
 	./mosh test/io-error.scm
